<resources>
    <string name="app_name">HikeBookClient</string>
    <string name="user_name_hint">Felhasználói név</string>
    <string name="password_hint">Jelszó</string>
    <string name="password_again_hint">Jelszó ismét</string>
    <string name="login_btn_text">Bejelentkezés</string>
    <string name="registration_btn_text">Regisztráció</string>
    <string name="start_screen_title">Kezdőlap</string>
    <string name="registration_screen_title">Regisztráció</string>
    <string name="about_button_text">Az Applikációról</string>
    <string name="my_map_menu">Saját Térkép</string>
    <string name="group_hike_menu">Csoportos Túrák</string>
    <string name="groups_menu">Csoportok</string>
    <string name="browse_menu">Útvonalak Böngészése</string>
    <string name="help_menu">Súgó</string>
    <string name="logout_menu">Kilépés</string>
    <string name="my_map_title_text">Saját térkép</string>
    <string name="delete_text">Törlés</string>
    <string name="edit_text">Szerkesztés</string>
    <string name="print_text">Nyomtatás</string>
    <string name="group_hike_create_text">Csoportos Túra Létrehozás</string>
    <string name="switch_to_my_map_list_button_text">Átváltás Lista Nézetre</string>
    <string name="switch_to_my_map_button_text">Átváltás Térkép Nézetre</string>
    <string name="my_map_title">Saját Térkép: Térkép Nézet</string>
    <string name="my_map_list_title">Saját Térkép: Lista Nézet</string>
    <string name="create_route_image_description">Create a route</string>
    <string name="hike_image_description">Start hike for the given route</string>
    <string name="route_create_button_text">Létrehozás</string>
    <string name="edit_route_edit_finalize_button_text">Mentés</string>
    <string name="printer_image_description">Print the given route</string>
    <string name="edit_image_description">Edit the given route</string>
    <string name="route_create_title">Útvonal Létrehozás</string>
    <string name="route_edit_title">Útvonal Szerkesztés</string>
    <string name="my_map_detail_title">Saját térkép: részletek</string>
    <string name="delete_image_description">Delete the given route</string>
    <string name="marker_spinner_description">marker picker</string>
    <string name="hike_description_hint">Túra leírás, részletek, megjegyzések</string>
    <string name="route_name_hint">Útvonal név</string>
    <string name="marker_text_dialog_text">Add meg a kiemelt pont szövegét:</string>
    <string name="marker_text_dialog_hint">Szöveg</string>
    <string name="hike_plan_button_text">Túra Tervezése</string>
    <string-array name="markers">
        <item>Új</item>
        <item>Várrom</item>
        <item>Kilátóhely</item>
        <item>Szöveg</item>
    </string-array>
    <string name="route_add_image_description">Add the given route to your map</string>
    <string name="browse_hike_detail_description">Felhasználói név:%1$s\nÚtvonal név: %2$s\n%3$s</string>
    <string name="add_to_my_map_text">Hozzáadás a saját térképhez</string>
    <string name="browse_title_text">Böngészés</string>
    <string name="browse_detail_title_text">Böngészés: részletek</string>
    <string name="generic_error_msg_with_hint">Valamilyen hiba lépett fel, további információkért tekintse meg a súgót.</string>
    <string name="generic_error_msg">Valamilyen hiba történt</string>
    <string name="not_last_point_delete_error_msg">Csak a legutóbb felvett pontot lehet törölni.</string>
    <string name="name_exists_error_msg">Ez a név már foglalt.</string>
    <string name="login_fail_msg">Vagy a név, vagy a jelszó hibás.</string>
    <string name="offline_once_error_msg">Ehhez a funkcióhoz internetkapcsolat szükséges.</string>
    <string name="offline_load_error_msg">A legfrissebb adatok betöltéséhez internetkapcsolat szükséges.</string>
    <string name="hike_plan_date_title">Dátum és Idő Tervezés</string>
    <string name="hike_plan_transport_title">Útazás Tervezés</string>
    <string name="hike_transport_title">Útazás</string>
    <string name="hike_title">Túra</string>
    <string name="transport_types_spinner_description">Travel types</string>
    <string name="date_picker_button_text">Dátum\nKiválasztása</string>
    <string name="time_picker_button_text">Idő\nKiválasztása</string>
    <string name="hike_start_button_text">Teljesítés\nKezdése</string>
    <string name="hike_finish_button_text">Teljesítés\nBefejezése</string>
    <string name="hike_route_plan_button_text">Utazás\nTervezése</string>
    <string name="transport_start_button_text">Vezetés\nKezdése</string>
    <string name="transport_finish_button_text">Vezetés\nBefejezése</string>
    <string name="my_location_fab_description">My Location</string>
    <string name="hike_finish_description">Finish the hike</string>
    <string name="offline_dialog_text">
        "Ha offline szeretnéd használni a térképet, akkor amíg online vagy, "
        "menj végig virtuálisan az úton a kívánt nagyításban. "
        "Ez után offlinera válthatsz, és amikor újrba bekapcsolod a mobileszközöd képernyőjét, "
        "akkor a térkép továbbra is elérhető lesz. Megkötés: "
        "ne kapcsold ki az alkalmazást, amíg újra internetelérhetőség közelben nem leszel."
    </string>
    <string name="offline_hike_button_text">Offlinera Váltás</string>
    <string name="hike_backwards_transport_plan_button_text">Hazaút Tervezése</string>
    <string name="hike_plan_transport_start_switch_text">Kezdőállomás</string>
    <string name="hike_plan_transport_end_switch_text">Végállomás</string>
    <string name="start_time_text">Kezdés ideje: %1$d:%2$d</string>
    <string-array name="transport_types">
        <item>Bicikli</item>
        <item>Autó</item>
    </string-array>
    <string name="groups_title">Csoportok</string>
    <string name="groups_detail_title">Csoportok: részletek</string>
    <string name="tab_connected_text">Csatlakozott</string>
    <string name="tab_unconnected_text">Nem Csatlakozott</string>
    <string name="tab_description_text">Tabs for navigating between connected and unconnected group lists</string>
    <string name="view_pager_description">Layouts associated with the given tabs</string>
    <string name="groups_map_menu_text">Térkép</string>
    <string name="groups_list_menu_text">Lista</string>
    <string name="groups_members_menu_text">Tagok</string>
    <string name="groups_add_from_my_map_button_text">Saját Térképről Felvétel</string>
    <string name="groups_create_group_button_text">Csoport Létrehozása</string>
    <string name="groups_create_dialog_text">Add meg a csoport nevét:</string>
    <string name="groups_create_dialog_hint_text">Név</string>
    <string name="add_from_my_map_spinner_description">Pick route from your map to add to group map</string>
    <string name="groups_detail_view_pager_content_description">Pages displaying the details of the chosen group</string>
    <string name="group_hike_title">Csoportos Túra</string>
    <string name="group_hike_detail_title">Csoportos Túra: részletek</string>
    <string name="group_hike_tab_description_text">Tabs for navigating between connected and unconnected group hike lists</string>
    <string name="group_hike_create_dialog_text">Add meg a csoprotos túra nevét:</string>
    <string name="group_hike_create_dialog_hint_text">Csoportos túra név</string>
    <string name="leave_text">Elhagyás</string>
    <string name="join_text">Csatlakozás</string>
    <string name="help_title">Súgó</string>
    <string name="about">
        "HikeBook: Közösségi háló túrázóknak\n\n\n"

        "Ez a mobilalkalmazás természetjáróknak készült. "
        "Főbb funkciói közé tartoznak az útvonalakkal való interaktivitás "
        "és a közösségi lehetőségek.\n\n"

        "Létrehozhatunk, törölhetünk, szerkeszthetünk, és ki is nyomtathatunk útvonalakat. "
        "Böngészhetünk mások útvonalai közt, és a saját térképünkre felvehetünk útvonalakat. "
        "Túránkat is eltervezhetjük az app segítségével, "
        "és a teljesítést is nyomon követhetjük.\n\n"

        "Csatlakozhatunk csoportokhoz, amikor is láthatjuk, hogy "
        "a csoportnak milyen útvonalai, és tagjai vannak. "
		"Csoporttagként létrehozhatunk, szerkeszthetünk, illetve törölhetünk csoport útvonalakat, "
		"és saját térképünkről is felvehetünk, illetve hozzáadhatunk csoport útvonalakat."
        "Csoportos túrákat is készíthetünk, és természetesen csatlakozhatunk is."
    </string>
    <string name="help_my_map">
        "Ezen a lapon a saját térképedet láthatod."
        "Itt fognak megjelenni az álatalad készített útvonalak, "
        "és azok is, amelyeket böngészés során adtál a térképedhez.\n\n"

        "Egy-egy útvonalra kattintva, egy kis felugró ablakon olvashatod az útvonal nevét."
        "Útvonalat a képernyő jobb alsó sarkában található + jelű gomb megnyomásával kezdhetsz készíteni."
        "Ha az útvonalakat lista formájában szeretnéd megtekinteni, akkor "
        "ezt az 'Átváltás Lista Nézetre' című, fent található gombra bökéssel teheted meg.\n\n"

        "Jobb felső sarokban, ha a 3 pöttyre böksz, akkor a menüt láthatod."
        "Ennek segítségével más képernyőkre navigálhatsz."
    </string>
    <string name="help_my_map_list">
        "Ezen a lapon a saját útvonalaidat láthatod lista formájában. "
        "Egy listaelem az útvonal nevéből, valamint néhány gombból áll.\n\n"

        "Ha egy adott nevű útvonalra böksz, akkor egy térképen is megtekintheted azt. "
        "Ha az útvonal nevétől jobb első gombra böksz, akkor az adott útvonalat szerkesztheted. "
        "Ettől jobbra levő gombbal a részletes oldalra kerülsz, "
        "ahol a képernyő alján levő nyomtatás gombbal kinyomtathatod az adott útvonalat. "
        "A sorban legutolsó gombbal az útvonalat törölheted a saját térképedről, valamint a listádból. "
        "A csoportos túra létrehozása gombbal a részletes nézetben elkezdhetsz "
        "egy csoportos túrát létrehozni.\n\n"

        "Ha az útvonalakat térképen szeretnéd megtekinteni, akkor "
        "nyomd meg az 'Átváltás Térkép Nézetre' gombot."
    </string>
    <string name="help_my_map_detail">
        "Ezen a lapon egy útvonalat láthatsz a térképen."
        "Az útvonal neve a lap tetején látható."
        "A képernyő alján levő gombokkal az adott útvonalat "
        "szerkesztheted, kinyomtathatod, törölheted, vagy "
        "elkezdhetsz egy csoportos túrát létrehozni."
    </string>
</resources>