<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/myMapFragment">
    <fragment
        android:id="@+id/myMapFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.mymap.MyMapFragment"
        android:label="@string/my_map_title"
        tools:layout="@layout/fragment_my_map">
        <action
            android:id="@+id/action_myMapFragment_to_myMapListFragment"
            app:destination="@id/myMapListFragment" />
        <action
            android:id="@+id/action_myMapFragment_to_routeCreateFragment"
            app:destination="@id/routeCreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/myMapListFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.mymap.MyMapListFragment"
        android:label="@string/my_map_list_title"
        tools:layout="@layout/fragment_my_map_list">
        <action
            android:id="@+id/action_myMapListFragment_to_myMapFragment"
            app:destination="@id/myMapFragment" />
        <action
            android:id="@+id/action_myMapListFragment_to_routeEditFragment"
            app:destination="@id/routeEditFragment" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="hu.kristof.nagy.hikebookclient.view.authentication.LoginActivity"
        android:label="LoginActivity" />
    <fragment
        android:id="@+id/routeCreateFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.mymap.RouteCreateFragment"
        android:label="@string/route_create_title"
        tools:layout="@layout/fragment_route_create" >
        <action
            android:id="@+id/action_routeCreateFragment_to_myMapFragment"
            app:destination="@id/myMapFragment"
            app:popUpTo="@id/routeCreateFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/routeEditFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.mymap.RouteEditFragment"
        android:label="@string/route_edit_title" >
        <argument
            android:name="routeName"
            app:argType="string" />
        <action
            android:id="@+id/action_routeEditFragment_to_myMapFragment"
            app:destination="@id/myMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/browseListFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.browse.BrowseListFragment"
        android:label="BrowseListFragment" />
</navigation>